CSS Fix for the button alignment in shop pages
Gone with the historic way of doing it to minimise changes needed.

--- a/custom.css
+++ b/custom.css
@@ -1,1 +1,17 @@
+/* Historical osCommerce ---------------------------------------------------- */
+
+.buttonSet {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.buttonAction {
+  float: right;
+}
+
+#piGal img {
+  max-width: 250px;
+  height: auto;
+}
+
 
